--- a/contact us page.css
+++ b/contact us page.css
@@ -1,15 +1,12 @@
-/*This is from Google fon popins*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-css
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif; 
+    font-family: 'Poppins', sans-serif; /* Changed font to Poppins */
 }
 
 .container {
+    margin-top: 50px;
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -29,9 +26,7 @@ css
 }
 
 .container form h1 {
-    color: #bc6c25
-     
-     ;
+    color: #bc6c25;
     font-weight: 800;
     line-height: 2;
     margin-top: 20px;
@@ -49,16 +44,16 @@ css
     margin-bottom: 10px;
     background: none;
     border-bottom: 2px solid #606c38ff; 
-    color: #606c38ff;
+    color: #606c38ff; 
 }
 
 .container form input::placeholder {
     color: #283618; 
 }
 
-.container form #lastName,
+.container form #LN,
 .container form #mobile {
-    margin-left: 20px;
+    margin-left: 25px;
 }
 
 .container form h4 {
@@ -104,5 +99,15 @@ css
     color: #dda15eff; 
     transition: 0.5s ease-in-out;
 }
+.inputField.error input {
+    border-color: var(--error-color);
+}
+.inputField small {
+    color: var(--error-color);
+    position: absolute;
+    visibility: hidden;
+}
 
-
+.inputField.error small {
+    visibility: visible;
+}
