--- a/public/css/wishlist.css
+++ b/public/css/wishlist.css
@@ -201,6 +201,7 @@ html::-webkit-scrollbar-thumb{
     table-layout: fixed;
     white-space:nowrap;
     font-size:20px;
+    margin-bottom:5%;
 }
 
 #wishlist table img {
@@ -236,7 +237,7 @@ html::-webkit-scrollbar-thumb{
 }
 
 #wishlist table thead{
-    border:1px solid #e2e9e1;
+    border:1px solid black;
     border-left:none;
     border-right:none;
 }
@@ -244,12 +245,26 @@ html::-webkit-scrollbar-thumb{
 #wishlist table thead td{
     font-weight:700px;
     text-transform:uppercase;
-    font-size:13px;
+    font-size:20px;
     padding:10px 0;
 }
 
 #wishlist table tbody tr td{
     padding-top:13px;
+}
+
+#wishlist table tbody tr td button{
+    font-size:17px;
+    background:#606c38;
+    color:#fff;
+    border-radius: 7px;
+    width:75%;
+    height:28px;
+    cursor:pointer;
+}
+
+#wishlist table tbody tr td button:hover{
+    background:#283618;
 }
 
 #wishlist table tbody tr td a i{
