--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -11,6 +11,7 @@
     height: 420px;
     overflow: hidden;
     z-index: 2;
+
 }
 
 .Login{
@@ -83,11 +84,19 @@ transition: .3 ease-in-out;
 .submit:hover{
     background: rgba(221,161,94,0.6);
     box-shadow: 1px 5px 7px 1px rgba(115, 148, 91, 0.3);
+
 }
+.submit {
+    display: block;
+    margin: 0 auto;
+    width: 110px;
+    border: 1px solid #283618;
+    font-weight: 600;
+}
+
 .two-chx{
     display:flex;
     justify-content:space-between;
-    color:#283618;
     margin:10px;
 }
 .two label a{
@@ -98,6 +107,9 @@ transition: .3 ease-in-out;
     text-decoration: underline;
 
 }
+.wrapper{
+    background-color: #fefae0;
+ }
 
 /********/
 
