--- a/public/css/contact us page.css
+++ b/public/css/contact us page.css
@@ -12,6 +12,7 @@ body{
     background: #fefae0; 
 }
 .contact h2{
+    margin-top: 70px;
     font-size: 40px;
     color: #283618; 
     text-align: center;
