--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -174,7 +174,7 @@ html::-webkit-scrollbar-thumb{
 /* Banner design */
 
 #banner {
-    background-image: url("../bannerImages/Banner2.jpg");
+    background-image: url("/Banner2.jpg");
     width:100%;
     height: 21vh;
     background-size:cover;
@@ -252,13 +252,34 @@ html::-webkit-scrollbar-thumb{
     padding-top:13px;
 }
 
+#cart table tbody tr td a{
+    cursor:pointer;
+}
+
+/*
+
 #cart table tbody tr td a i{
     color:#606c38;
+    cursor:pointer;
 }
 
 #cart table tbody tr td a i:hover{
     color:#425827;
 }
+    */
+
+#cart table tbody tr td a button{
+    color:#606c38;
+    cursor:pointer;
+    font-size: 2.5rem;
+    background: none;
+    border: none;
+}
+
+#cart table tbody tr td a button:hover{
+    color:#425827;
+}
+
 
 #cart table thead tr td{
     font-size:17.5px;
@@ -310,6 +331,3 @@ html::-webkit-scrollbar-thumb{
     padding: 10px;
     font-size:20px;
 }
-
-
-
