--- a/public/css/shopPage.css
+++ b/public/css/shopPage.css
@@ -260,7 +260,7 @@ html::-webkit-scrollbar-thumb{
     width: 40px;
     height: 40px;
     line-height: 40px;
-    padding-left: 7px;
+    padding-left: 1px;
     border-radius: 50px;
     background-color: #fefae0;
     font-weight:500px;
@@ -270,6 +270,10 @@ html::-webkit-scrollbar-thumb{
     right:10px;
     position:absolute;
     font-size:2.0rem;
+}
+
+#product1 .pro .des .shopCart form button{
+    cursor:pointer;
 }
 
 #pagination{
