--- a/public/views/bookDetails.ejs
+++ b/public/views/bookDetails.ejs
@@ -2,7 +2,7 @@
 
 <html>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="/cart.css"> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
+    <link rel="stylesheet" href="/bookDetail.css"> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
     <link rel="icon" href="/Icon.jpeg">
     <link rel="stylesheet" href="/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -32,7 +32,6 @@
         <a href="/wishlist" class="fas fa-heart"></a>
         <a href="/cart" class="fas fa-shopping-cart"></a>
         <a href="userpro.html" class="fas fa-cog"></a>
-        <!--<div id="logout-btn" class="fas fa-sign-out-alt"></div>-->
         </div>
         
         </div>
@@ -54,80 +53,59 @@
         
             </header>
 
-    <!-- Creating a banner -->
+    <div id="bookDetails">
 
-    <div id="banner">
-        <h2>#thankful</h2>
-        <p>We appreciate your continued support. And we hope you come again!</p>
+        <div class="single-book-image">
+<img src="/<%=book.bookCover%>" width="100%" id="MainImg" alt="">
+
+<div class="small-img-group">
+
+
+<div class="small-img-col">
+<img src="/Book6.jpeg" width="100%" class="small-img" alt="">
+</div>
+
+<div class="small-img-col">
+<img src="/Book5.jpeg" width="100%" class="small-img" alt="">
+</div>
+
+<div class="small-img-col">
+    <img src="/Book4.jpeg" width="100%" class="small-img" alt="">
+    </div>
+
+    <div class="small-img-col">
+        <img src="/Book3.png" width="100%" class="small-img" alt="">
         </div>
 
-    <!-- Creating a table for the amount of books the user has bought -->
+</div>
 
-    <div id="cart">
-<table width="100%">
-<thead>
-    <tr>
-        <td>Book Cover</td>
-        <td>Book</td>
-        <td>Price</td>
-        <td>Quantity</td>
-        <td>Subtotal</td>
-        <td>Remove</td>
-    </tr>
-</thead>
-<tbody>
-    <% if(cart && cart.items.length > 0) { %>
-        <% cart.items.forEach(item => { %>
-    <tr>
-        <td><img src="/<%= item.bookId.bookCover %>" alt=""></td> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
-        <td><%= item.bookId.bookTitle %></td>
-        <td>$<%= item.bookId.bookPrice %></td>
-        <td><%= item.quantity %></td>
-        <td>$<%= item.bookId.bookPrice * item.quantity %></td>
-        <td><a href="#"><button class="delete-item-btn"><i class="fas fa-times-circle"></i></button></td>
-    </tr>
-    <% }) %>
-    <% }%>
-</tbody>
+        </div>
 
-</table>
+        <div class="single-book-details">
+<h6 id="bookCategory">Book Category: <%= book.bookCategory %></h6>
+<h4 id="bookTitle">Book Title: <%= book.bookTitle %></h4>
+<h2 id="bookPrice">Book Price: <%= book.bookPrice %></h2>
+<form action="/cart" class="secretForm" method="POST">
+    <input type ="hidden" name="userId" value="6679bdafae31fc98ac456aee">
+    <input type="hidden" name="bookId" value="<%= book._id %>">
+    <button type="submit" class="normal1">Add To Cart</button>
+</form>
+<form action="/wishlist" class="secretForm" method="POST">
+    <input type ="hidden" name="userId" value="6679bdafae31fc98ac456aee">
+    <input type="hidden" name="bookId" value="<%= book._id %>">
+    <button class="normal2">Add To Wishlist</button>
+</form>
+<h4>Book Details:</h4>
+<span>
+<%=book.bookDescription%>
+</span>
+
+        </div>
 
 </div>
 
-<!-- Cart add (total prices calculated for the items added inside the cart) -->
 
-<div id="cart-add">
-<div id="subtotal">
-
-    <h3>Cart Totals</h3>
-    <table>
-<tr>
-<td>Cart Subtotal</td>
-<td>$ <%= cart ? cart.items.reduce((total,item) => total + item.bookId.bookPrice * item.quantity,0) : 0%></td>
-
-</tr>
-<tr>
-<td>Shipping</td>
-<td>Free</td>
-</tr>
-
-<tr>
-<td><strong>Total</strong></td>
-<td><strong>$ <%= cart ? cart.items.reduce((total,item) => total + item.bookId.bookPrice * item.quantity,0) : 0%></strong></td>
-</tr>
-
-
-
-</table>
-
-<button class="normal">Proceed to checkout</button>
-
-
-</div>
-
-</div>
-
-<!-- footer -->
+<!--footer-->
 
 <footer class="footer">
     <div class="social">
@@ -157,6 +135,6 @@
 
     </footer>
 
-
 </body>
+
 </html>
