--- a/public/views/wishlist.ejs
+++ b/public/views/wishlist.ejs
@@ -2,10 +2,15 @@
 
 <html>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="/cart.css"> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
+    <link rel="stylesheet" href="/wishlist.css"> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
+    <link rel="icon" href="/Icon.jpeg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="/wishlist.css"> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
     <link rel="icon" href="/Icon.jpeg">
     <link rel="stylesheet" href="/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <title>Bookly</title>
     <title>Bookly</title>
 <head>
 
@@ -32,7 +37,6 @@
         <a href="/wishlist" class="fas fa-heart"></a>
         <a href="/cart" class="fas fa-shopping-cart"></a>
         <a href="userpro.html" class="fas fa-cog"></a>
-        <!--<div id="logout-btn" class="fas fa-sign-out-alt"></div>-->
         </div>
         
         </div>
@@ -61,69 +65,41 @@
         <p>We appreciate your continued support. And we hope you come again!</p>
         </div>
 
-    <!-- Creating a table for the amount of books the user has bought -->
+    <!-- Creating a table for things that the user wants to add in this wishlist . -->
 
-    <div id="cart">
+    <div id="wishlist">
 <table width="100%">
 <thead>
     <tr>
+        <td>Add</td>
         <td>Book Cover</td>
         <td>Book</td>
         <td>Price</td>
-        <td>Quantity</td>
-        <td>Subtotal</td>
         <td>Remove</td>
     </tr>
 </thead>
 <tbody>
-    <% if(cart && cart.items.length > 0) { %>
-        <% cart.items.forEach(item => { %>
+    <% if(wishlist && wishlist.items.length > 0) { %>
+        <% wishlist.items.forEach(item => { %>
     <tr>
+        <td>
+            <form action="/cart" class="secretForm" method="POST">
+            <input type ="hidden" name="userId" value="6679bdafae31fc98ac456aee">
+            <input type="hidden" name="bookId" value="<%= item.bookId._id %>">
+            <button type="submit">Add To Cart</button>
+        </form>
+    </td>
         <td><img src="/<%= item.bookId.bookCover %>" alt=""></td> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
         <td><%= item.bookId.bookTitle %></td>
         <td>$<%= item.bookId.bookPrice %></td>
-        <td><%= item.quantity %></td>
-        <td>$<%= item.bookId.bookPrice * item.quantity %></td>
-        <td><a href="#"><button class="delete-item-btn"><i class="fas fa-times-circle"></i></button></td>
+        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
     </tr>
+
     <% }) %>
-    <% }%>
+    <% } %>
 </tbody>
 
 </table>
-
-</div>
-
-<!-- Cart add (total prices calculated for the items added inside the cart) -->
-
-<div id="cart-add">
-<div id="subtotal">
-
-    <h3>Cart Totals</h3>
-    <table>
-<tr>
-<td>Cart Subtotal</td>
-<td>$ <%= cart ? cart.items.reduce((total,item) => total + item.bookId.bookPrice * item.quantity,0) : 0%></td>
-
-</tr>
-<tr>
-<td>Shipping</td>
-<td>Free</td>
-</tr>
-
-<tr>
-<td><strong>Total</strong></td>
-<td><strong>$ <%= cart ? cart.items.reduce((total,item) => total + item.bookId.bookPrice * item.quantity,0) : 0%></strong></td>
-</tr>
-
-
-
-</table>
-
-<button class="normal">Proceed to checkout</button>
-
-
-</div>
 
 </div>
 
@@ -156,6 +132,9 @@
         &copy;	 BOOKLY    </p>
 
     </footer>
+    
+
+
 
 
 </body>
